<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_item_balance"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_item_history"/>
        <item
            android:id="@+id/nav_register_overview"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_item_register_overview"/>
    </group>
    
    <item android:title="@string/nav_category_more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/nav_item_settings"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/nav_item_send"/>
        </menu>
    </item>

</menu>